# Mcp

./: README.md  pyproject.toml  requirements.txt  test.py
config/: config.json  multi_doctype_config.json  restricted_config.json
src/: __init__.py  erpnext_client.py  permissions.py  server.py
