[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erpnext-mcp-server"
version = "1.0.0"
description = "MCP Server for ERPNext Customer Management"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.5.0"
]

[project.scripts]
erpnext-mcp-server = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]