[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server"
version = "1.0.0"
description = "MCP Server for ERPNext Management"
authors = [
    {name = "Hazem Sharaf", email = "hazemsharaf56@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.5.0"
]

[project.scripts]
mcp-server = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]